--- a/htmlcss/style.css
+++ b/htmlcss/style.css
@@ -1,20 +1,53 @@
 body {
-     background-color:grey ;
+     background-color: white  ;
+     font-family: Verdana;
 }
 
 
 #title, .subtitle, .posttitle {
-   color:red;
+   color:blue;
+}
+
+#title{
+font-size: 40px;
+text-transform: uppercase;
+
+}
+
+a{
+   text-decoration: line-through;
+   color: blue;
 }
 
 .posttitle {
    font-size: 16px;
    font-style: italic;
+   font-family: Arial;
+   margin: 0;
+   margin-bottom: 15px;
 }
 
 .post{
    background-color: white;
-   padding: 10px;
+   padding: 15px;
    border: 3px solid black;
-   margin: 10px;
+   margin-bottom: 15px;
+   border-radius: 5px;
+}
+
+.post_content{
+   margin: 0;
+   margin-bottom: 15px;
+   font-weight: bold;
+   text-transform:capitalize;
+   text-decoration: line-through;
+}
+
+.post_image{
+   margin-bottom: 15px;
+}
+
+.photo{
+   border: 1px;
+   border-radius: 50px;
 }
